# FastAPI-Template

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.en.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
src/api/v1/: __init__.py
src/api/v1/apis/: apis.py
src/api/v1/base/: base.py
src/api/v1/roles/: roles.py
src/api/v1/tasks/: __init__.py  tasks.py
src/core/: dependency.py  exceptions.py  init_app.py  metrics.py  middlewares.py
src/log/: context.py  log.py
src/models/: enums.py
src/repositories/: api.py  role.py  user.py
src/schemas/: response.py
src/settings/: config.py
src/tasks/: __init__.py  hooks.py  queue.py  worker.py
src/tasks/jobs/: __init__.py  audit_jobs.py  email_jobs.py
src/utils/: cache.py  debug_helper.py  password.py  response_adapter.py
tests/: README.md  conftest.py  test_core_functionality.py  test_database_cache.py
tests/integration/: conftest.py
tests/unit/: test_cache_utils.py  test_jwt_utils.py  test_password_utils.py  test_response_adapter.py  test_sensitive_word_filter.py
